# self-evolving-agent-runtime

./: .gitignore  Cargo.toml  README.md  SLIDES.md  TESTING.md  employee_database.json  proposal.md
capabilities/: Cargo.toml
capabilities/crates/cap1/: Cargo.toml  PLAN.md  meta.json
capabilities/crates/cap1_v7022/: Cargo.toml  PLAN.md  meta.json
capabilities/crates/cap1_v7325/: Cargo.toml  PLAN.md  meta.json
capabilities/crates/cap1_v7325_v8085/: Cargo.toml  PLAN.md  meta.json
capabilities/crates/cap_98446/: Cargo.toml  meta.json
capabilities/crates/cap_98549/: Cargo.toml  meta.json
capabilities/crates/common/: API.md  Cargo.toml
capabilities/crates/echo_rust/: Cargo.toml  meta.json
capabilities/crates/echo_v1/: Cargo.toml  meta.json
capabilities/crates/echo_v2/: Cargo.toml  meta.json
capabilities/crates/get_benefits_info/: Cargo.toml  meta.json
capabilities/crates/get_car_details/: Cargo.toml  meta.json
capabilities/crates/get_emergency_contacts/: Cargo.toml  meta.json
capabilities/crates/get_employee_profile/: Cargo.toml  meta.json
capabilities/crates/get_employee_salary/: Cargo.toml  meta.json
capabilities/crates/get_family_details/: Cargo.toml  meta.json
capabilities/crates/get_hr_records/: Cargo.toml  meta.json
capabilities/crates/get_leave_balance/: Cargo.toml  meta.json
capabilities/crates/get_outlook_calendar/: Cargo.toml  meta.json
capabilities/crates/get_performance_reviews/: Cargo.toml  meta.json
capabilities/crates/get_salary_details/: Cargo.toml  meta.json
crates/core/: Cargo.toml
crates/host/: Cargo.toml
(+87 files in other folders)
