[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
# Core dependencies available to all capabilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
capability_common = { path = "crates/common" }
ureq = { version = "2", features = ["json"] }

# Additional common dependencies
regex = "1"
base64 = "0.22"
url = "2"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
