[package]
name = "se_runtime_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.2", features = ["blocking", "json", "rustls-tls"] }
wasmtime = "29"
wasmtime-wasi = "29"
bytes = "1"
chrono = "0.4"
