[package]
name = "se_runtime_host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.2", features = ["blocking", "json", "rustls-tls"] }
urlencoding = "2"

se_runtime_core = { path = "../core" }
